[build.gradle] Enable preview features (Record, for ArgParser.ParsedArgs)