@@ -35,6 +35,18 @@ compileKotlin {
     }
 }
 
+tasks.withType(JavaCompile) {
+    options.compilerArgs += "--enable-preview"
+}
+
+tasks.withType(Test) {
+    jvmArgs += "--enable-preview"
+}
+
+tasks.withType(JavaExec) {
+    jvmArgs += '--enable-preview'
+}
+
 compileTestKotlin {
     kotlinOptions {
         jvmTarget = "1.8"
